create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -866,39 +866,56 @@ section.lazy-placeholder:after {
 .cid-rTfIzBpQm7 textarea.form-control {
   min-height: 188px;
 }
-.cid-rTFK98GQEN {
-  padding-top: 45px;
-  padding-bottom: 45px;
+.cid-rTFLWPtrRS {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-@media (max-width: 767px) {
-  .cid-rTFK98GQEN .media-wrap {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-rTFK98GQEN .media-wrap .mbr-iconfont-logo {
-  font-size: 7rem;
-  color: #f36;
-}
-.cid-rTFK98GQEN .media-wrap img {
-  height: 6rem;
-}
-.cid-rTFK98GQEN .mbr-text {
+.cid-rTFLWPtrRS .form-text {
   color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-rTFK98GQEN .footer-lower .copyright {
+  .cid-rTFLWPtrRS .content {
+    text-align: center;
+  }
+  .cid-rTFLWPtrRS .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-rTFLWPtrRS .img-logo img {
+  height: 6rem;
+}
+.cid-rTFLWPtrRS .form-group,
+.cid-rTFLWPtrRS .input-group-btn {
+  padding: 0;
+}
+.cid-rTFLWPtrRS .form-control {
+  font-size: .75rem;
+  text-align: center;
+  min-width: 150px;
+}
+.cid-rTFLWPtrRS .input-group-btn .btn {
+  padding: .75rem 1.5625rem !important;
+  margin-left: .625rem;
+  text-transform: none;
+  color: #fff;
+  text-align: center;
+}
+.cid-rTFLWPtrRS .copyright .mbr-text {
+  color: #767676;
+}
+@media (max-width: 767px) {
+  .cid-rTFLWPtrRS .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rTFK98GQEN .footer-lower hr {
+.cid-rTFLWPtrRS .footer-lower hr {
   margin: 1rem 0;
   border-color: #000;
   opacity: .05;
 }
-.cid-rTFK98GQEN .footer-lower .social-list {
+.cid-rTFLWPtrRS .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -908,26 +925,40 @@ section.lazy-placeholder:after {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rTFK98GQEN .footer-lower .social-list .mbr-iconfont-social {
+.cid-rTFLWPtrRS .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #232323;
 }
-.cid-rTFK98GQEN .footer-lower .social-list .soc-item {
+.cid-rTFLWPtrRS .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rTFK98GQEN .footer-lower .social-list a {
+.cid-rTFLWPtrRS .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rTFK98GQEN .footer-lower .social-list a:hover {
+.cid-rTFLWPtrRS .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rTFK98GQEN .footer-lower .social-list {
+  .cid-rTFLWPtrRS .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rTFLWPtrRS .foot-logo {
+    text-align: center !important;
+  }
+  .cid-rTFLWPtrRS .foot-title {
+    text-align: center !important;
+  }
+  .cid-rTFLWPtrRS .mbr-text {
+    text-align: center !important;
+  }
+  .cid-rTFLWPtrRS .form-group {
+    margin: 0;
   }
 }
 .cid-rTgXpoL67Q {
